More References + Typos and Fact-Checking
- Added more references to the paper
- Fixed some typos
- Fact-checked a few items and modified them slightly to be more accurate

--- a/acmart-sigplanproc-template.tex
+++ b/acmart-sigplanproc-template.tex
@@ -143,7 +143,7 @@
 %% Note: \begin{abstract}...\end{abstract} environment must come
 %% before \maketitle command
 \begin{abstract}
-CodeQL is a program analysis tool developed by Github Security Lab. Developers and researchers can identify software vulnerabilities and bugs with CodeQL by writing powerful queries  called QL. GitHub also developed a CodeQL Visual Studio Code extension, which is an open source project written in TypeScript, utilizing the CodeQL command line tool for the analysis service. This extension currently displays the analysis results in the tabular view. 
+CodeQL is a program analysis tool developed by Semmle. Developers and researchers can identify software vulnerabilities and bugs with CodeQL by writing queries in a language called QL. They have also developed a CodeQL Visual Studio Code extension, which is an open source project written in TypeScript, utilizing the CodeQL command line tool for the analysis service. This extension currently displays the analysis results in the tabular view. 
 \newline
 \indent In this paper, we present CodeQLVis - a CodeQL visualization tool integrated in Visual Studio Code which creates intuitive graphical representations of the analysis results from CodeQL. 
 
@@ -189,7 +189,7 @@ CodeQL is a powerful code analysis engine that supports many mainstream programm
 \newline
 \indent Existing tools leveraging CodeQL on the market display the analysis results only in text-based methods, which is not very straightforward and requires users to have knowledge in program analysis to understand. For example, LGTM has tools that make it easier to understand data-flow analysis performed with CodeQL. The way they explore data-flow paths is with a series of code snippets. CodeQL Visual Studio Code extension only outputs the analysis results in tabular view.
 \newline
-\indent Semmle, the company behind CodeQL, has been acquired by GitHub and widespread public support for CodeQL has resulted. The popularity of this tool, and the lack of visualization support, has given us reason to explore this problem. We've narrowed our scope in this domain to visualizing dataflow analysis, particularly as it pertains to taint-flow tracking. 
+\indent Semmle, the company behind CodeQL, was acquired by GitHub in 2019 and there has been widespread public support for CodeQL's novel approach to static analysis \cite{Semmle_GitHub}. The popularity of this tool, and the lack of visualization support, has given us reason to explore this problem. We've narrowed our scope in this domain to visualizing data-flow analysis, particularly as it pertains to taint-flow tracking. 
 \newline
 \indent Therefore, in order to convey a complete and intuitive picture of a system more quickly than text-based methods, we have extended the CodeQL for Visual Studio Code extension to support taint-flow graph visualizations.
 
@@ -208,17 +208,19 @@ CodeQL is a powerful code analysis engine that supports many mainstream programm
 \section{Background}
 \textcolor{red}{We'll probably want to extend this section with any bits of terminology that we use later on. If we need to add a third section for another foundational element, we can do that as well.\newline}
 Our work is heavily dependent upon the static analysis tool CodeQL, as well as the framework for Visual Studio Code extensions. As such, we will provide a brief introduction to both of these to better contextualize our artifact.
+
 \subsection{CodeQL}
-CodeQL is a tool for performing static analysis that transforms code into queryable relational databases. Database queries are then written in the CodeQL language to retrieve certain properties about the code that the database was derived from. This approach makes CodeQL incredibly fast, though the free-form nature of database queries means that it can be difficult to know exactly what format the data will have when retrieved.
+CodeQL is a tool for performing static analysis that transforms code into queryable relational databases \cite{Semmle_CodeQL_About}. Database queries are then written in the CodeQL language to retrieve certain properties about the code that the database was derived from. This approach makes CodeQL incredibly fast, though the free-form nature of database queries means that it can be difficult to know exactly what format the data will have when retrieved.
 \newline
 \indent Two queries with the same semantic meaning can retrieve sets of data that are superficially different. As a result, there are efforts underway to produce libraries of pre-defined queries to help users look for common vulnerabilities or other issues in their code-base.
+
 \subsection{Visual Studio Code Extensions}
 Visual Studio Code extensions are in-editor tools that are created by their community of users. Visual Studio Code, often abbreviated to VS Code, offers a powerful Extension API for this purpose. Extensions are written in JavaScript or TypeScript and can modify almost any aspect of VS Code. Features such us simple editor themes, all the way to adding support for self-developed programming languages is possible.
 \newline
 \indent Of particular interest for our purposes are VS Code Webviews. Where an extension that has been limited to the Extensions API are limited to modifying existing elements of the editor, the Webview API provides an opportunity to render interactive HTML in order to create entirely new functionality within the editor. CodeQL for Visual Studio Code, for example, uses this API to render query results tables.
 
 \section{Overview}
-Thanks to the fact that CodeQL VSCode extension is open sourced, we built our visualization tool by extending this existing CodeQL extension. For the visualization part, we utilized the WebView APIs provided by VSCode and visualization libraries available for rendering the UI. 
+Thanks to the fact that CodeQL VSCode extension is open sourced, we built our visualization tool by extending this existing CodeQL extension. For the visualization part, we utilized the Webview APIs provided by VSCode and visualization libraries available for rendering the UI. 
 \newline
 \indent CodeQLVis will be provided as an alternative to CodeQL VSCode extension's default way of rendering the results in tabular view. Users can easily switch between using the default or CodeQLVis. More details of the implementation of CodeQLVis will be described in the following section.
 
@@ -229,12 +231,15 @@ Thanks to the fact that CodeQL VSCode extension is open sourced, we built our vi
 \end{figure}
 
 \section{Approach}
+
 \subsection{CodeQL Queries}
 \[TODO\] 
+
 \subsection{Queries to Graphs}
 \[TODO\] 
+
 \subsection{Rendering Results}
-The rendering part of the visualization tool is running on the WebView infrastructure of Visual Studio Code. We use React.js framework to build the front-end of CodeQLVis. TypeScript library hediet/visualization is used as the rendering infrastructure for the graphs. Websocket infrastructure enables the back-end to send analysis results to the front-end for rendering. 
+The rendering part of the visualization tool is running on the Webview infrastructure of Visual Studio Code. We use React.js framework to build the front-end of CodeQLVis. TypeScript library hediet/visualization is used as the rendering infrastructure for the graphs. Websocket infrastructure enables the back-end to send analysis results to the front-end for rendering. 
 
 \section{Evaluation}
 Due to the nature of this project, we only examined whether CodeQLVis generates correct taint-flow graphs. Therefore, we tested CodeQLVis with different code examples from the official CodeQL documentation and compared our taint-flow graphs with the CodeQL analysis results through manual inspections. In particular, we ask the following questions. 
@@ -261,19 +266,21 @@ CodeQLVis should display the nodes in the exact order in their taint-flow paths 
 \newline
 \newline
 We observed no contradictions between our visualization graphs and CodeQL analysis results. 
+
 \section{Discussion and Future Work}
 CodeQLVis is the first visualization tool for CodeQL. It gives an intuitive way for understanding the analysis results generated by CodeQL. Also, it is integrated into Visual Studio Code so developers can benefit from this tool. 
 \newline
 \indent However, we admit that this tool is not very complete limited by the time constraint and there is a huge space to improve. 
 \newline
 \indent The graphs can be more interactive. Users will be able to navigate between the code snippets by clicking on the nodes on the visualization graphs. Also, the styles of the visualization can be richer by replacing the current visualization library we are using by a more powerful one. At this moment, CodeQLVis only supports taint analysis. More data-flow analyses can be extended into CodeQLVis in the future. 
+
 \section{Related Work}
 \textcolor{red}{Probably get rid of the related tools bit. Everything we could say here fits better in the background. Expand Data Flow Visualization section such that each entry gets it's own bolded section.\newline}
-There has been a wealth of work done in the space of visualizing data-flow analysis, which can be considered a superset of taint-flow analysis. We highlight some related data-flow visualization efforts. There has been less work specifically on visualizing taint-flow, so we more thoroughly discuss efforts in this specific domain.
+There has been a wealth of work done in the space of visualizing data-flow analysis, which can be considered a superset of taint-flow analysis. There has been less work specifically on visualizing taint-flow, and none specifically in our area of interest. We highlight some efforts that have the most overlap with our project.
 \newline\newline
-\indent \textbf{"Understanding and Visualizing Full Systems with Data Flow Tomography"}\cite{10.1145/1353535.1346308} outlines an approach whereby data is tagged and tracked through the program to develop a visualzation of all interconnected pieces. In contrast, rather than doing live analysis, we use CodeQL to perform static analysis and find theoretical data-flow paths that meet certain pre-defined criteria.
+\indent \textbf{"Understanding and Visualizing Full Systems with Data Flow Tomography"} \cite{10.1145/1353535.1346308} outlines an approach whereby data is tagged and tracked through the program to develop a visualzation of all interconnected pieces. In contrast, rather than doing live analysis, we use CodeQL to perform static analysis and find theoretical data-flow paths that meet certain pre-defined criteria.
 \newline\newline
-\indent \textbf {"VisuFlow"} is a plugin developed for the Eclipse IDE that generates visualizations for static analysis performed by Soot. While similar to our approach, their plugin does not work with CodeQL queries, and was developed for a different IDE.
+\indent \textbf {VisuFlow} \cite{10.1145/3183440.3183470} is a plugin developed for the Eclipse IDE that generates visualizations for static analysis performed by Soot. While similar to our approach, their plugin does not work with CodeQL queries, and was developed for a different IDE.
 \[TODO\] 
 
 \section{Conclusion}
