--- a/codeql-vis-refs.bib
+++ b/codeql-vis-refs.bib
@@ -52,3 +52,18 @@ url = {https://blog.semmle.com/secure-software-github-semmle/},
 month = {sep},
 lastaccessed = {December 6, 2020}
 }
+
+@online{Semmle_LGTM,
+author = {Semmle},
+title = {About LGTM},
+url = {https://lgtm.com/help/lgtm/about-lgtm},
+lastaccessed = {December 6, 2020}
+}
+
+@online{GitHub_SecurtyLab_CodeQL,
+author = {GitHub},
+year = {2020},
+title = {CodeQL for research},
+url = {https://securitylab.github.com/tools/codeql},
+lastaccessed = {December 6, 2020}
+}
